@@ -10,22 +10,37 @@
   <modules>
     <module>GameEngine</module>
     <module>Player</module>
-    <module>Enemy</module>
+    <module>CommonEnemy</module>
     <module>Map</module>
     <module>Tower</module>
     <module>ObjectPool</module>
-    <module>FXGL</module>
+    <module>WaveManager</module>
+    <module>Common</module>
+    <module>Bullet</module>
+    <module>UI</module>
+    <module>Shop</module>
+    <module>Health</module>
+    <module>NormalEnemy</module>
+    <module>CommonPlayer</module>
+    <module>CommonBullet</module>
+
   </modules>
+  <properties>
+    <java>java</java>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+  </properties>
 
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>3.3.2</version>
+        <version>3.2.0</version>
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.12.1</version>
+        <version>3.10.1</version>
         <configuration>
           <fork>true</fork>
         </configuration>
@@ -34,7 +49,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>1.6.0</version>
         <inherited>false</inherited>
         <executions>
           <execution>
@@ -44,17 +59,141 @@
           </execution>
         </executions>
         <configuration>
-          <executable>java</executable>
+          <executable>${java}</executable>
           <workingDirectory>.</workingDirectory>
           <longModulepath>false</longModulepath>
           <arguments>
-            <argument>--module-path=mods</argument>
+            <argument>-Dorg.lwjgl.util.Debug=true</argument>
+            <argument>-Djava.library.path=libs</argument>
+            <argument>--module-path=mods-mvn</argument>
             <argument>--class-path=libs/*</argument>
-            <argument>--module=GameEngine/dk.sdu.mmmi.GRP7.main.Main</argument>
-            <argument>--add-modules javafx.graphics</argument>
+            <argument>--module=GameEngine/app.App</argument>
           </arguments>
         </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <!-- parent project should delete 'mods-mvn' -->
+      <id>parent-project</id>
+      <activation>
+        <file>
+          <missing>src</missing>
+        </file>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+              <filesets>
+                <fileset>
+                  <directory>mods-mvn</directory>
+                </fileset>
+                <fileset>
+                  <directory>libs</directory>
+                </fileset>
+              </filesets>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <!-- child projects should copy artifact into 'mods-mvn' -->
+      <id>child-project</id>
+      <activation>
+        <file>
+          <exists>src</exists>
+        </file>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>3.0.2</version>
+            <executions>
+              <execution>
+                <id>copy-installed</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>${project.groupId}</groupId>
+                      <artifactId>${project.artifactId}</artifactId>
+                      <version>${project.version}</version>
+                      <type>jar</type>
+                    </artifactItem>
+                  </artifactItems>
+                  <outputDirectory>../mods-mvn</outputDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>copy-dependencies</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy-dependencies</goal>
+                </goals>
+                <configuration>
+                  <includeArtifactIds>
+                    fxgl,
+                    fxgl-core,
+                    fxgl-entity,
+                    fxgl-io,
+                    fxgl-gameplay,
+                    fxgl-scene,
+                    javafx-base,
+                    javafx-graphics,
+                    javafx-controls,
+                    javafx-fxml,
+                    javafx-media,
+                    jackson-databind,
+                    jackson-annotations,
+                    jackson-core,
+                    lifecycle,
+                    audio,
+                    kotlin-stdlib,
+                    storage,
+                    util
+                  </includeArtifactIds>
+                  <outputDirectory>../mods-mvn</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.3.1</version>
+            <executions>
+              <execution>
+                <id>copy-external-resources</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>../mods-mvn/levels</outputDirectory>
+                  <resources>
+                    <resource>
+                      <directory>../Map/src/main/resources/levels</directory>
+                      <includes>
+                        <include>**/*</include>
+                      </includes>
+                    </resource>
+                  </resources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
